# oscarch

./: .gitignore  README.md
cmake_base_project/: CMakeLists.txt  build-run-unix.sh  build-run-win-msys2.sh  build.sh
cpp_intro1/: CMakeLists.txt
cpp_oo_intro/: CMakeLists.txt  build.sh
figures/: CMakeLists.txt  build_run_linux.sh  build_run_win_msys2.sh
hashing/: CMakeLists.txt  addresses.txt  build-run-unix.sh  build-run-win-msys2.sh
libclient/: CMakeLists.txt  build-run-unix.sh  build-run-win-msys2.sh
memory_mgnt/: CMakeLists.txt  (+1 more)
sorting/: CMakeLists.txt  build-run-unix.sh  build-run-win-msys2.sh
sorting/data/: addresses.txt  coordinates.txt  numbers.txt
sorting/include/algorithms/: InsertionSortGeneric.h  InsertionSortGenericWithComparator.h  InsertionSortIntegers.h  MergeSortIntegers.h  QuickSortIntegers.h
sorting/include/comparator/: Comparator.h  CoordinateYXComparator.h
sorting/include/entity/: Coordinate.h  MailingAddress.h
sorting/include/utilities/: ArrayUtilities.h
sorting/src/: main.cpp
sorting/src/algorithms/: InsertionSortGeneric.cpp  InsertionSortGenericWithComparator.cpp  InsertionSortIntegers.cpp  MergeSortIntegers.cpp  QuickSortIntegers.cpp
sorting/src/comparator/: Comparator.cpp  CoordinateYXComparator.cpp
sorting/src/entity/: Coordinate.cpp  MailingAddress.cpp
sorting/src/utilities/: ArrayUtilities.cpp
trees/: CMakeLists.txt  build_run_linux.sh  build_run_unix.sh  build_run_win_msys2.sh
trees/include/bst/: BinarySearchTree.h  TreeNode.h
trees/src/: main.cpp
trees/src/bst/: BinarySearchTree.cpp  TreeNode.cpp
(+41 files in other folders)
